--- a/style.css
+++ b/style.css
@@ -412,3 +412,8 @@ input[type="range"]:focus::-ms-fill-upper {
 .name-singer {
     color: #ccc;
 }
+@media screen and (max-width: 400px) {
+    .container {
+        transform: scale(0.5);
+    }
+}
